--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 				<option>White</option> 
 				<option>Black</option> 
 			</select> 
-			<input type="button" value="Select and Remove"> 
-		</form>
+			<input type="button" value="Select and Remove" onclick="removeColor()"> 
+</form>
 
 		<script type="text/javascript" src="./script.js">
 		</script>
